# LudHome

./: .env  .gitignore  Cargo.toml  DEV.md  INSTALL.md  README.md  TODO.md  session.lua
.sqlx/: query-02be9279f9861384d4386207651cfe722a2f38d22111620438b79fd5987fcb22.json  query-3eb52c7b8dd8893da0da8747ceae25ee1d0469a8c88e70ca5578526a8ce076b5.json  query-dec57dc5d9e0d3154a4c4eeb74f8bdac2a68bc79f0792b1d825017a4df8fce6d.json  query-e84cd9b8d40754cbfcec2c772a494063cb49f3a40b2ea41714182d3d790639d6.json  query-f9d5b7c235dc6c0224a55834961b90717f7f1b42462dc568c4e070a1e78410fa.json
images/: Logo.xcf  Logo_With_Title.xcf
src/: main.rs  mqtt_topic.rs
src/sensors/: build.sh  install_lib.sh
src/sensors/temperature_sensor/: broker.cpp  broker.h  icons.h  temperature_sensor.ino  wifi.cpp  wifi.h
src/service/: env.conf  install_services.sh  ludhome_mqtt_saver.service  run_ludhome_mqtt_saver.sh
src/sql/: create_tables.sql  device_insert.sql  device_select_by_mqtt_id.sql  sensor_data_insert.sql  sensor_insert.sql  sensor_select_by_name.sql
