[package]
name = "ludhome_mqtt_saver"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = "0.24"
dotenv = "0.15"
sqlx = { version = "0.8", features = ["macros", "postgres", "runtime-tokio-native-tls", "time"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"
rustflags = ["-C", "target-feature=+crt-static"]

